# linux-multithreaded-application-using-cmake-shell-visio

./: CMakeLists.txt  README.md
diagrams/: task_manager_architecture.vsdx.vsdx
scripts/: run.sh
src/: main.cpp
